--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,4 @@
 org.gradle.caching=true
 org.gradle.warning.mode=none
 org.gradle.parallel=true
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.6.2-bin.zip
