--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'kotlin'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
 apply plugin: 'opensearch.opensearchplugin'
@@ -46,6 +47,7 @@ loggerUsageCheck.enabled = false
 validateNebulaPom.enabled = false
 
 buildscript {
+    ext.kotlin_version = '1.9.23'
     ext {
         opensearch_version = System.getProperty("opensearch.version", "2.17.0")
     }
@@ -59,6 +61,7 @@ buildscript {
 
     dependencies {
         classpath "org.opensearch.gradle:build-tools:${opensearch_version}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -75,6 +78,7 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
 configurations.all {
