--- a/build.gradle
+++ b/build.gradle
@@ -70,16 +70,23 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.apache.commons:commons-lang3:3.5'
-    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
-    implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0'
+    implementation("org.apache.commons:commons-lang3:3.5")
+    implementation("org.apache.logging.log4j:log4j-core:2.23.1")
+    implementation("org.apache.logging.log4j:log4j-api:2.23.1")
+
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
 }
+
 
 configurations.all {
     resolutionStrategy {
         force 'org.apache.logging.log4j:log4j-core:2.23.1'
         force 'org.apache.logging.log4j:log4j-api:2.23.1'
     }
+}
+
+test {
+    useJUnitPlatform()
 }
